# VidCraft

./: .gitignore  compose_video.py  download_cosyvoice_model.py  merge_srt.py  rebuild_srt_73.py  record.html  server.py  transcribe.py  transcript.srt  transcript.txt  transcript_merged.srt  transcript_merged.txt  trim_front_30s.py  tts_synthesize.py  update_srt_from_txt.py
.claude/: settings.local.json
_bmad-output/planning-artifacts/: architecture.md  prd.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: common.py  img2vid.py  project.py  sentences.py  tool.py  voice.py
backend/app/routes/: compose.py  img2vid.py  llm_config.py  projects.py  sentences.py  tools.py  video_edit.py  voice.py
backend/app/services/: compose.py  img2vid.py  llm.py  optimize.py  transcribe.py  video_edit.py  voice_clone.py
backend/app/utils/: ffmpeg.py  gpu.py  paths.py  state.py
backend/app/workers/: executor.py  transcribe_worker.py
backend/tests/: conftest.py  test_img2vid.py  test_projects.py  test_sentences.py  test_tools.py  test_voice.py
docs/: api-contracts.md  architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
voice_studio/: .gitignore  app.py  gen_voice_previews.py  llm.py  test_preview.html  transcribe_worker.py
voice_studio/templates/: index.html  index_line316.html
(+13 files in other folders)
